.kube/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  creationTimestamp: null
  name: frontend-web-ing
spec:
  tls:
  - hosts:
    - lms.edu-mind.uz
    secretName: frontend-ingress-web-tls
  ingressClassName: nginx
  rules:
  - host: lms.edu-mind.uz
    http:
      paths:
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
